--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
-
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.3",
     "@react-navigation/stack": "^5.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
